--- a/qr-code/printthis.css
+++ b/qr-code/printthis.css
@@ -9,6 +9,13 @@ margin-top: 0px;
 padding:0;
 background:#fff
 }
+.list-mangle {
+height: 652px;
+width: 466px;
+padding: 4px;
+margin-top:0px;
+margin-bottom:0px;
+}
 .qrcode {
 padding-top:193px;
 padding-left:83px;
