--- a/qr-code/printthis.css
+++ b/qr-code/printthis.css
@@ -17,7 +17,7 @@ background:#fff;
 .qrcode {
 position:absolute;
 }
-.ssid {
+.text-ssid {
 position:absolute;
 font-weight: bold;
 position:absolute;
