--- a/login/login.css
+++ b/login/login.css
@@ -136,7 +136,11 @@ width: 100%; /* Full width */
 height: 100%; /* Full height */
 overflow: auto; /* Enable scroll if needed */
 background-color: rgb(0,0,0); /* Fallback color */
-background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+text-align: center;
+color: #fff;
+font-size: 25pt;
+font-weight:bold;
 }	  
 /* Modal Content */
 .modal-content {
