--- a/login/login.css
+++ b/login/login.css
@@ -142,6 +142,13 @@ color: #fff;
 font-size: 25pt;
 font-weight:bold;
 }	  
+.center-screen{
+position: fixed; /* or absolute */
+top: 50%;
+left: 50%;
+/* bring your own prefixes */
+transform: translate(-50%, -50%);
+}
 /* Modal Content */
 .modal-content {
 line-height:1.4;
