--- a/login/login.css
+++ b/login/login.css
@@ -1,3 +1,26 @@
+#dialogoverlay{
+	display: none;
+	opacity: .6;
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	background: #292929;
+	width: 100%;
+	z-index: 10;
+}
+#dialogbox{
+	display: none;
+	position: fixed;
+	background: #000;
+	border-radius:5px; 
+	width:500px;
+	z-index: 10;
+}
+#dialogbox > div{ border-radius:5px; margin:2px;background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat ; }
+#dialogbox > div > #dialogboxhead{ background: #111; opacity: 0.5;font-weight:bold; font-size:16px; padding:10px; color:#fff; }
+#dialogbox > div > #dialogboxbody{ ;font-weight:bold; font-size:15px; padding:20px; color:#ccc; }
+#dialogbox > div > #dialogboxfoot{  padding:10px; text-align:right; }
+
 /* The Main Menu */
 .mymenu {
 	z-index: 4;
