--- a/login/login.css
+++ b/login/login.css
@@ -239,10 +239,14 @@
 .center-screen {
 	position: fixed;
 	/* or absolute */
-	top: 50%;
+	top: 40%;
 	left: 50%;
 	/* bring your own prefixes */
 	transform: translate(-50%, -50%);
+}
+
+.center-screen button{
+width:300px !important; padding:10px; margin:4px; font-weight:bold;font-size:18px;box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* Modal Content */
