--- a/login/login.css
+++ b/login/login.css
@@ -298,7 +298,7 @@ width:300px !important; padding:10px; margin:4px; font-weight:bold;font-size:18p
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 157px;
+	width: auto;
 	cursor: pointer;
 	font-weight: normal;
 	float: right;
