--- a/login/login.css
+++ b/login/login.css
@@ -9,20 +9,23 @@
 	width: 100%;
 	z-index: 10;
 }
+
 #dialogbox {
 	display: none;
 	position: fixed;
 	background: #000;
 	border-radius: 5px;
-	width: 500px;
+	width: 550px;
 	z-index: 10;
-	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);	
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
+
 #dialogbox>div {
 	border-radius: 5px;
 	margin: 3px;
 	background: #292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat;
 }
+
 #dialogbox>div>#dialogboxhead {
 	background: #111;
 	opacity: 0.5;
@@ -31,16 +34,18 @@
 	padding: 10px;
 	color: #fff;
 }
+
 #dialogbox>div>#dialogboxbody {
 	font-weight: bold;
 	font-size: 15px;
 	padding: 20px;
 	color: #ccc;
 }
+
 #dialogbox>div>#dialogboxfoot {
 	padding: 10px;
 	text-align: right;
-}	  
+}
 
 /* The Main Menu */
 .mymenu {
@@ -245,8 +250,13 @@
 	transform: translate(-50%, -50%);
 }
 
-.center-screen button{
-width:300px !important; padding:10px; margin:4px; font-weight:bold;font-size:18px;box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
+.center-screen button {
+	width: 300px !important;
+	padding: 10px;
+	margin: 4px;
+	font-weight: bold;
+	font-size: 18px;
+	box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
 /* Modal Content */
