--- a/login/index.css
+++ b/login/index.css
@@ -291,7 +291,7 @@ position: fixed;
 /* Stay in place */
 z-index: 1;
 /* Sit on top */
-padding-top: 80px;
+padding-top: 100px;
 /* Location of the box */
 left: 0;
 top: 0;
@@ -308,16 +308,47 @@ background-color: rgba(0, 0, 0, 0.6);
 }
 .modal-login {
 display: none;
-padding-top: 20px;
-
+/* Hidden by default */
+position: fixed;
+/* Stay in place */
+z-index: 1;
+/* Sit on top */
+padding-top: 120px;
+/* Location of the box */
+left: 0;
+top: 0;
+width: 100%;
+/* Full width */
+height: 100%;
+/* Full height */
+overflow: auto;
+/* Enable scroll if needed */
+background-color: rgb(0, 0, 0);
+/* Fallback color */
+background-color: rgba(0, 0, 0, 0.6);
+/* Black w/ opacity */
 }
 .modal-profile {
 display: none;
 /* Hidden by default */
+position: fixed;
+/* Stay in place */
+z-index: 1;
 /* Sit on top */
-padding-top: 20px;
+padding-top: 120px;
 /* Location of the box */
-
+left: 0;
+top: 0;
+width: 100%;
+/* Full width */
+height: 100%;
+/* Full height */
+overflow: auto;
+/* Enable scroll if needed */
+background-color: rgb(0, 0, 0);
+/* Fallback color */
+background-color: rgba(0, 0, 0, 0.6);
+/* Black w/ opacity */
 }	  
 .modal-change-profile{
 display: none;
@@ -326,7 +357,7 @@ position: fixed;
 /* Stay in place */
 z-index: 1;
 /* Sit on top */
-padding-top: 80px;
+padding-top: 120px;
 /* Location of the box */
 left: 0;
 top: 0;
@@ -348,7 +379,7 @@ position: fixed;
 /* Stay in place */
 z-index: 1;
 /* Sit on top */
-padding-top: 80px;
+padding-top: 100px;
 /* Location of the box */
 left: 0;
 top: 0;
@@ -443,19 +474,19 @@ border: 4px solid #ccc;
 display: none;
 }
 /* -- RESPONSIVE -- */
-@media screen and (max-width:768px){
+@media screen and (max-width:700px){
 .mymenu {
 width:96% !important;
 } 
+}
+
+@media screen and (max-width:600px){
 button {
 margin-bottom:10px !important;	  
 }
 .modal-content {
 width:96% !important;
 }
-}
-
-@media screen and (max-width:600px){
 .mikrotik-logo {
 display: flex;
 justify-content: center;
