--- a/login/index.css
+++ b/login/index.css
@@ -190,9 +190,10 @@ width: 700px;
 border-radius: 0 0 5px 5px;
 border: 2px solid #f9f9f9;
 font-weight: bold;
-font-size: 14px;
+font-size: 16px;
 position: relative;
-padding-left:10px;
+padding-left:12px;
+padding-right:12px;
 }
 .mymenu ul {
 list-style-type: none;
@@ -452,6 +453,10 @@ display: flex;
 justify-content: center;
 margin-bottom:15px;
 }
+.mymenu {
+padding-left:0px;
+padding-right:0px;
+} 
 .mymenu ul {
 background: none !important;
 justify-content: center;
