--- a/login/login.css
+++ b/login/login.css
@@ -56,8 +56,10 @@
 	border-radius: 0 0 5px 5px;
 	border: 2px solid #f9f9f9;
 	font-weight: bold;
-	font-size: 14px;
+	font-size: 16px;
 	position: relative;
+	padding-left:12px;
+padding-right:12px;
 }
 
 .mymenu ul {
