--- a/login/login.css
+++ b/login/login.css
@@ -68,7 +68,7 @@ padding-right:12px;
 	padding: 0;
 	overflow: hidden;
 	background-color: #f9f9f9;
-	background: url("./img/made-for-mikrotik.png") no-repeat right !important;
+	background: url("../img/made-for-mikrotik.png") no-repeat right !important;
 	margin-right: 10px;
 }
 
