--- a/login/index.css
+++ b/login/index.css
@@ -202,7 +202,7 @@ text-align: right;
       overflow: hidden;
       background-color: #f9f9f9;
       margin-right: 10px;
-      background: url("./img/made-for-mikrotik.png") no-repeat right !important;
+      background: url("../img/made-for-mikrotik.png") no-repeat right !important;
       }
       .mymenu li {
       float: left;
