--- a/login/index.css
+++ b/login/index.css
@@ -48,6 +48,8 @@ background-color: #ff6600;
 border-color: #ff6600;
 border:none;
 padding:5px;
+padding-top:8px;
+padding-bottom:8px;
 margin-right:5px;
 width:120px;
 font-size:13px;
