--- a/mikrotik/stytes.css
+++ b/mikrotik/stytes.css
@@ -43,13 +43,13 @@ border-bottom:0px solid #ccc;
 margin-bottom:10px;
 margin-top:20px;
 color: #111 !important;;
-font-size:25px;
+font-size:25px; 
 font-weight:bold; 
 }	
 .logo a{
 color:#111 !important;
 text-decoration:none !important;
-font-size:24px;
+font-size:25px;
 text-decoration:none;
 }
 .logo-left {
@@ -91,6 +91,9 @@ font-size:16px;
 font-weight:bold;
 }
 @media screen and (max-width: 710px){
+.logo-left a{
+font-size:22px;
+}		
 button {
 margin-top:5px;
 }  
