--- a/login/index.css
+++ b/login/index.css
@@ -425,7 +425,7 @@ background-position: center center;
 -webkit-border-radius: 99em;
 -moz-border-radius: 99em;
 border-radius: 99em;
-border: 4px solid #ccc;
+border: 4px solid #292929;
 }
 .mikrotik-logo {
 display: none;
