--- a/login/login.css
+++ b/login/login.css
@@ -79,7 +79,7 @@ float: left;
 
 .mymenu li a {
 display: block;
-color: #292929;
+color: #31363A;
 text-align: center;
 padding: 8px 10px;
 text-decoration: none;
