--- a/qr-code/printthis.css
+++ b/qr-code/printthis.css
@@ -6,7 +6,7 @@ bottom:0px;
 background:#fff;
 font-family:-apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
 }
-.list-mangle {
+.list-output-content {
 height: 652px;
 width: 466px;
 padding: 4px;
