--- a/login/login.css
+++ b/login/login.css
@@ -60,6 +60,7 @@ font-size: 15px;
 position: relative;
 padding-left:12px;
 padding-right:12px;
+margin-bottom:20px;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
