--- a/login/login.css
+++ b/login/login.css
@@ -61,7 +61,7 @@ font-size: 15px;
 position: relative;
 padding-left:12px;
 padding-right:12px;
-margin-bottom:20px;
+margin-bottom:40px;
 box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.2), 0 3px 10px 0 rgba(0, 0, 0, 0.19);
 }
 
@@ -366,3 +366,10 @@ margin-bottom:3px;
 #ShowProfile{
 display:none;
 	}
+	
+@media screen and (max-width:700px) {
+.mymenu {
+margin-bottom:15px
+
+}
+}	
