--- a/login/index.css
+++ b/login/index.css
@@ -13,33 +13,33 @@ button{color:#fff;background-color:#f60;border-color:#f60;border:none;padding:5p
 button:hover{background-color:#ccc;color:#111}
 .row:after{content:"";display:table;clear:both}
 input[type=checkbox]{margin-right:7px}
-input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:12px;font-size:15px!important;border-radius:5px}
+input[type=text],select,textarea{width:100%;padding:5px;border:1px solid #bbb;border-radius:1px;resize:vertical;margin-bottom:12px;font-size:14px;!important;border-radius:5px}
 label{padding:5px 5px 5px 0;display:inline-block}
 input[type=submit]{background-color:#f60;color:#fff;padding:12px 20px;border:none;border-radius:1px;cursor:pointer;float:right;border-radius:5px}
 input[type=submit]:hover{background-color:#45a049}
 #dialogoverlay{display:none;opacity:.5;position:fixed;top:0;left:0;background:#292929;width:100%;z-index:10}
 #dialogbox{display:none;position:fixed;background:#000;border-radius:5px;width:400px;z-index:10;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
 #dialogbox>div{border-radius:5px;margin:3px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
-#dialogbox>div>#dialogboxhead{background:#111;opacity:.5;font-weight:700;font-size:16px;padding:10px;color:#fff}
-#dialogbox>div>#dialogboxbody{font-weight:400;font-size:15px;padding:20px;color:#ccc}
+#dialogbox>div>#dialogboxhead{background:#111;opacity:.5;font-weight:700;font-size:14px;;padding:10px;color:#fff}
+#dialogbox>div>#dialogboxbody{font-weight:400;font-size:14px;;padding:20px;color:#ccc}
 #dialogbox>div>#dialogboxfoot{padding:10px;text-align:right}
 #dialogoverlay{display:none;opacity:.5;position:fixed;top:0;left:0;background:#292929;width:100%;z-index:10}
 #dialogbox{display:none;position:fixed;background:#000;border-radius:5px;width:400px;z-index:10;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
 #dialogbox>div{border-radius:5px;margin:3px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
-#dialogbox>div>#dialogboxhead{background:#111;opacity:.5;font-weight:700;font-size:16px;padding:10px;color:#fff}
-#dialogbox>div>#dialogboxbody{font-weight:400;font-size:15px;padding:20px;color:#ccc}
+#dialogbox>div>#dialogboxhead{background:#111;opacity:.5;font-weight:700;font-size:14px;;padding:10px;color:#fff}
+#dialogbox>div>#dialogboxbody{font-weight:400;font-size:14px;;padding:20px;color:#ccc}
 #dialogbox>div>#dialogboxfoot{padding:10px;text-align:right}
-.mymenu{z-index:5;margin:0 auto;background-color:#fff;width:700px;border-radius:0 0 5px 5px;border:2px solid #fff;font-weight:700;font-size:15px;position:relative;padding-left:5px;padding-right:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
+.mymenu{z-index:5;margin:0 auto;background-color:#fff;width:700px;border-radius:0 0 5px 5px;border:2px solid #fff;font-weight:700;font-size:14px;;position:relative;padding-left:5px;padding-right:5px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19)}
 .mymenu ul{list-style-type:none;margin:0;padding:0;overflow:hidden;background-color:#fff;margin-right:10px;background:url(../img/made-for-mikrotik.png) no-repeat right!important}
 .mymenu li{float:left}
 .mymenu li a{display:block;color:#31363A;text-align:center;padding:8px 10px;text-decoration:none;margin-top:5px;margin-bottom:5px}
 .mymenu li a:hover{background-color:#292929;color:#fff;border-radius:5px}
 .forms-out{margin:0 auto;padding:0;font-size:14px}
 .forms-in{width:100%;margin:0 auto;color:#fff;padding:0;font-size:14px}
-.forms-in div{padding:0;max-width:350px;margin:0 auto;border-radius:5px;margin-bottom:15px}
+.forms-in div{padding:0;max-width:350px;margin:0 auto;border-radius:5px;margin-bottom:14px;}
 .forms-in h3{text-align:center}
-.forms-in input{border:none;width:100%;margin-bottom:15px;padding:10px;box-sizing:border-box;border-radius:3px}
-.forms-in button{border:none;padding:7px 20px;border-radius:4px;cursor:pointer;font-weight:700;margin-top:10px;margin-bottom:15px}
+.forms-in input{border:none;width:100%;margin-bottom:14px;;padding:10px;box-sizing:border-box;border-radius:3px}
+.forms-in button{border:none;padding:7px 20px;border-radius:4px;cursor:pointer;font-weight:700;margin-top:10px;margin-bottom:14px;}
 .forms-in button:hover{opacity:.7}
 .hide{display:none}
 #forgot-password{cursor:pointer}
@@ -56,8 +56,8 @@ input[type=submit]:hover{background-color:#45a049}
 .modal-content{line-height:1.4;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat top left;color:#ddd;margin:auto;padding:20px;border:1px solid #444;width:350px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);font-weight:700}
 .modal-content p{padding:0;margin:5px 5px 0 17px;display:list-item;line-height:2;list-style:disc}
 .modal-content h2{color:#f60;float:left}
-.modal-content-profile{line-height:1.4;border-radius:5px;background:#fff;color:#292929;margin:auto;padding:20px;border:1px solid #444;width:350px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);font-weight:700}
-.close{color:#aaa;float:right;font-size:20px;font-weight:700;margin-top:-25px;margin-right:-15px}
+.modal-content-profile{line-height:1.4;border-radius:5px;background:#fff;color:#292929;margin:auto;padding:25px;border:1px solid #444;width:350px;box-shadow:0 2px 5px 0 rgba(0,0,0,0.2),0 3px 10px 0 rgba(0,0,0,0.19);font-weight:700}
+.close{color:#aaa;float:right;font-size:20px;font-weight:700;margin-top:-25px;margin-right:-14px;}
 .close:hover,.close:focus{color:orange;text-decoration:none;cursor:pointer}
 .myButtonGoogle{display:flex;justify-content:space-between;align-items:center;width:auto;cursor:pointer;font-weight:400;float:right}
 .myButtonGoogle :hover{opacity:.7}
@@ -69,11 +69,13 @@ input[type=submit]:hover{background-color:#45a049}
 .mymenu{width:98.5%!important}
 button{margin-bottom:10px!important}
 .modal-content{width:98.5%!important}
+.modal-content-profile{width:98.5%!important;}	
 }
 @media screen and (max-width:600px) {
+.modal-content-profile{width:98.5%!important; margin-top:30px; padding:10px}	
 .modal-content{margin-top:30px}
-.mikrotik-logo{display:flex;justify-content:center;margin-top:15px}
-.avatar{display:flex;justify-content:center;margin-bottom:15px}
+.mikrotik-logo{display:flex;justify-content:center;margin-top:14px;}
+.avatar{display:flex;justify-content:center;margin-bottom:14px;}
 .mymenu{padding-left:0;padding-right:0}
 .mymenu ul{background:none!important;justify-content:center;display:flex}
 }
