--- a/mikrotik/stytes.css
+++ b/mikrotik/stytes.css
@@ -45,6 +45,7 @@ margin-top:20px;
 color: #111 !important;;
 font-size:25px; 
 font-weight:bold; 
+line-height: normal;
 }	
 .logo a{
 color:#111 !important;
