--- a/mikrotik/stytes.css
+++ b/mikrotik/stytes.css
@@ -45,7 +45,7 @@ margin-top:20px;
 color: #111 !important;;
 font-size:25px; 
 font-weight:bold; 
-line-height: normal;
+line-height: 1.5;
 }	
 .logo a{
 color:#111 !important;
