--- a/login/index.css
+++ b/login/index.css
@@ -4,7 +4,7 @@ body{font-size:14px;font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Robo
 html,body{height:100%;width:100%;margin:0;padding:0;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) no-repeat}
 *{box-sizing:border-box}
 h2{color:#f60;float:left}
-h1{color:#ddd;font-size:22px;margin-bottom:5px;margin-top:10px}
+h1{color:#fff;font-size:22px;margin-bottom:5px;margin-top:10px}
 a:link{color:#f60}
 a:visited{color:#f60}
 a:hover{color:#f60}
