--- a/mikrotik/stytes.css
+++ b/mikrotik/stytes.css
@@ -16,16 +16,14 @@ a:hover{color:#000}
 a:active{color:#08c}
 *{box-sizing:border-box}
 body{min-width:200px;max-width:1000px;margin:0 auto;padding:0 10px 10px;-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;color:#24292e;font-family:-apple-system,BlinkMacSystemFont,Segoe UI,Helvetica,Arial,sans-serif,Apple Color Emoji,Segoe UI Emoji;font-size:16px;line-height:1.4;word-wrap:break-word}
-h1,h2,h3,h4,h5,h6{margin-top:20px;padding-bottom:20px;font-size:20px;color:#f60!important}
+h1,h2,h3,h4,h5,h6{margin-top:20px;padding-bottom:20px;font-size:25px;color:#f60!important}
 pre{white-space:-moz-pre-wrap;white-space:-pre-wrap;white-space:-o-pre-wrap;white-space:pre-wrap;word-wrap:break-word}
 .logo{border-bottom:0 solid #ccc;margin-bottom:10px;margin-top:20px;color:#292929!important;font-size:25px;font-weight:700;line-height:1.4}
 .logo a{color:#292929!important;text-decoration:none!important;font-size:25px;text-decoration:none}
 .logo-left{float:left}
 .logo-right{float:right}
-.header{padding:10px;display:block;color:#ddd;border:0 solid #333;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) repeat right}
+.header{padding:10px;height:auto;display:block;color:#ddd;border:0 solid #333;border-radius:5px;background:#292929 url(https://user-images.githubusercontent.com/42666125/147363663-30767ef4-09af-48d6-8ea1-ee7a1c09e90f.png) repeat right}
 .header a{color:#f60!important;text-decoration:none!important}
-.header-left{float:left;width:425px}
-.header-right{float:right;margin-top:-2px}
 button{color:#fff;background-color:#f60;border-color:#f60;border-radius:2px;border:none;padding:5px;width:70px;font-size:15px;font-weight:700}
 @media screen and (max-width:700px) {
 body{font-size:14px!important}
